--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ header {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
@@ -59,10 +59,14 @@ header {
   color: #42b983;
 }
 
-.icon {
-  max-width: 30px;
-  float: left;
-  margin-right: 15px;
+.link {
+  display: inline-block;
+  margin: 10px 5px 0 0;
+}
+
+.link img {
+  max-width: 15px;
+  vertical-align: text-top;
 }
 
 footer {
@@ -94,6 +98,12 @@ footer {
   text-indent: -9999px;
   width: 32px;
   height: 32px;
+}
+
+@media screen and (max-width: 992px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media screen and (max-width: 768px) {
