--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
 
+:root {
+  --on: #42b983;
+  --off: #dc3545;
+}
+
 body {
   font-family: Roboto, sans-serif;
   font-size: 16px;
@@ -8,7 +13,7 @@ body {
 }
 
 a {
-  color: #42b983;
+  color: var(--on);
 }
 
 .page-wrap {
@@ -52,11 +57,29 @@ header {
 }
 
 .title.off {
-  color: #dc3545;
+  color: var(--off);
 }
 
 .title.on {
-  color: #42b983;
+  color: var(--on);
+}
+
+.note {
+  display: none;
+}
+
+.box {
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+}
+
+.on .box {
+  background-color: var(--on);
+}
+
+.off .box {
+  background-color: var(--off);
 }
 
 .link {
@@ -67,6 +90,12 @@ header {
 .link img {
   max-width: 15px;
   vertical-align: text-top;
+}
+
+.note {
+  margin-top: 20px;
+  border-top: 1px solid lightgray;
+  padding-top: 20px;
 }
 
 footer {
@@ -88,7 +117,7 @@ footer {
 
 .three-quarters:not(:required) {
   animation: three-quarters 1250ms infinite linear;
-  border: 8px solid #42b983;
+  border: 8px solid --var(on);
   border-right-color: transparent;
   border-radius: 16px;
   box-sizing: border-box;
